--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: sync-all-txt-to-v2
+name: sync-v2
 
 on:
   schedule:
-    - cron: '0 */1 * * *'  # 每 6 小时运行一次
+    - cron: '0 */6 * * *'  # 每 6 小时运行一次
   workflow_dispatch:
 
 jobs:
@@ -13,25 +13,63 @@ jobs:
       - name: Checkout your repository
         uses: actions/checkout@v4
 
-      - name: wd.txt #本地稳定节点
-        run: |
-          git clone https://github.com/CCXUEHUI/tb.git repo
-          
-      - name: Clone source repository 2
-        run: |
-          git clone https://github.com/major-118/subscriptions.git repo1
-
-      - name: Clear v2.txt before appending
+      - name: Clear v2.txt
         run: |
           > v2.txt
 
-      - name: wd.txt
+      - name: Append content from wd.md
         run: |
-          find repo -name "wd.md" -exec cat {} + >> v2.txt
+          curl -fsSL wd.md >> v2.txt
+          echo -e "\n" >> v2.txt
 
-      - name: Append all *.txt files from repo1
+      - name: Append content from dz1.txt links (with base64 detection)
         run: |
-          find repo1 -name "*.txt" -exec cat {} + >> v2.txt
+          while IFS= read -r url; do
+            [[ -z "$url" || "$url" =~ ^# ]] && continue
+
+            raw_url="$url"
+            if [[ "$url" == https://github.com/* ]]; then
+              raw_url=$(echo "$url" | sed -E 's#https://github.com/([^/]+)/([^/]+)/blob/(.+)#https://raw.githubusercontent.com/\1/\2/\3#')
+            fi
+
+            echo "Fetching: $raw_url"
+            content=$(curl -fsSL "$raw_url")
+
+            # 判断是否为 base64（简单检测：是否只包含 base64 字符）
+            if echo "$content" | grep -qE '^[A-Za-z0-9+/=]+$'; then
+              echo "$content" | base64 -d >> v2.txt || echo "# ⚠️ 解码失败: $raw_url" >> v2.txt
+            else
+              echo "$content" >> v2.txt
+            fi
+            echo -e "\n" >> v2.txt
+          done < dz1.txt
+
+      - name: Append content from dz2.txt GitHub repositories (with base64 detection)
+        run: |
+          while IFS= read -r repo_url; do
+            [[ -z "$repo_url" || "$repo_url" =~ ^# ]] && continue
+            echo "Scanning repo: $repo_url"
+
+            if [[ "$repo_url" =~ github.com/([^/]+)/([^/]+) ]]; then
+              user="${BASH_REMATCH[1]}"
+              repo="${BASH_REMATCH[2]}"
+              api_url="https://api.github.com/repos/$user/$repo/git/trees/main?recursive=1"
+
+              files=$(curl -s "$api_url" | jq -r '.tree[] | select(.type=="blob") | .path' | grep -E '\.txt$|\.md$')
+              for file in $files; do
+                raw_url="https://raw.githubusercontent.com/$user/$repo/main/$file"
+                echo "Fetching file: $raw_url"
+                content=$(curl -fsSL "$raw_url")
+
+                if echo "$content" | grep -qE '^[A-Za-z0-9+/=]+$'; then
+                  echo "$content" | base64 -d >> v2.txt || echo "# ⚠️ 解码失败: $raw_url" >> v2.txt
+                else
+                  echo "$content" >> v2.txt
+                fi
+                echo -e "\n" >> v2.txt
+              done
+            fi
+          done < dz2.txt
 
       - name: Set Git identity
         run: |
@@ -41,5 +79,5 @@ jobs:
       - name: Commit and push v2.txt
         run: |
           git add v2.txt
-          git commit -m "Auto-sync v2.txt"
+          git commit -m "Auto-sync v2.txt with decoded content from wd.md, dz1.txt, dz2.txt"
           git push
