--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: sync-v2
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # 每 5 分钟运行一次
+    - cron: '* 0/5 * * *' # 每 5 分钟运行一次
   workflow_dispatch:
 
 jobs:
@@ -79,18 +79,7 @@ jobs:
           
       - name: Clean v2.txt (remove empty and comment lines)
         run: |
-          grep -vE '^\s*$|^#' v2.txt > cleaned.txt && mv cleaned.txt v2.txt
-
-      - name: Wait for 60 seconds before running Python
-        run: |
-          echo "等待 60 秒以确保网络稳定或资源准备完成..."
-          sleep 60
-
-      - name: Format v2.txt with city names and numbering
-        run: |
-          pip install requests
-          python3 tcp_speed_filter.py
-          
+          grep -vE '^\s*$|^#' v2.txt > cleaned.txt && mv cleaned.txt v2.txt          
       - name: Commit and push v2.txt
         run: |
           git add v2.txt
