--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,14 @@ jobs:
             fi
           done < dz2.txt
 
-      - name: Install dependencies and run speed_sort.py
+      - name: Install sing-box
+        run: |
+          curl -L -o sing-box.tar.gz https://github.com/SagerNet/sing-box/releases/latest/download/sing-box-linux-amd64.tar.gz
+          tar -xzf sing-box.tar.gz
+          sudo mv sing-box*/sing-box /usr/local/bin/
+          sing-box version
+
+      - name: Install Python dependencies and run speed_sort.py
         run: |
           pip install requests
           python3 speed_sort.py
