--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,8 @@ jobs:
 
       - name: Install sing-box
         run: |
-          curl -L -o sing-box.tar.gz https://github.com/SagerNet/sing-box/releases/latest/download/sing-box-linux-amd64.tar.gz
+          VERSION=$(curl -s https://api.github.com/repos/SagerNet/sing-box/releases/latest | jq -r .tag_name)
+          curl -L -o sing-box.tar.gz https://github.com/SagerNet/sing-box/releases/download/${VERSION}/sing-box-${VERSION}-linux-amd64.tar.gz
           tar -xzf sing-box.tar.gz
           sudo mv sing-box*/sing-box /usr/local/bin/
           sing-box version
