--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -14,7 +14,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Clear v2.txt
-        run: > v2.txt
+        run: |
+          echo -n > v2.txt
 
       - name: Merge wd.md
         run: |
