--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -74,13 +74,13 @@ jobs:
         run: |
           echo "📦 下载 bruceblink 自定义 Xray 构建"
           curl -L -o xray.zip https://github.com/bruceblink/free-v2ray/releases/download/latest/xray-linux-64.zip
-          unzip -o xray.zip
+          unzip -o xray.zip || (echo "❌ 解压失败，文件可能不是 zip 格式"; exit 1)
           chmod +x xray
           sudo mv xray /usr/local/bin/
           echo "✅ 当前版本信息:"
           xray version
           echo "✅ 命令支持情况:"
-          xray help | grep test || echo "❌ 当前版本不支持 test 命令"
+          xray help | grep test || (echo "❌ 当前版本不支持 test 命令"; exit 1)
 
       - name: Run speed test
         run: python3 speed_test.py
