--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -72,9 +72,9 @@ jobs:
 
       - name: Install custom Xray-core (with test support)
         run: |
-          echo "📦 下载 bruceblink 自定义 Xray 构建"
-          curl -L -o xray.zip https://github.com/bruceblink/free-v2ray/releases/download/latest/xray-linux-64.zip
-          unzip -o xray.zip || (echo "❌ 解压失败，文件可能不是 zip 格式"; exit 1)
+          echo "📦 下载你上传的 Xray 构建"
+          curl -L -o xray.zip https://github.com/user-attachments/files/23049875/Xray-linux-64.zip
+          unzip -o xray.zip || (echo "❌ 解压失败"; exit 1)
           chmod +x xray
           sudo mv xray /usr/local/bin/
           echo "✅ 当前版本信息:"
