--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -13,77 +13,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Clear v2.txt
-        run: echo -n > v2.txt
-
-      - name: Merge wd.md
+      - name: Set up Python and dependencies
         run: |
-          cat wd.md >> v2.txt
-          echo -e "\n" >> v2.txt
+          python -m pip install --upgrade pip
+          pip install requests pyyaml
 
-      - name: Merge dz1.txt links
-        run: |
-          while IFS= read -r url; do
-            [[ -z "$url" || "$url" =~ ^# ]] && continue
-            raw_url="$url"
-            if [[ "$url" == https://github.com/* ]]; then
-              raw_url=$(echo "$url" | sed -E 's#https://github.com/([^/]+)/([^/]+)/blob/(.+)#https://raw.githubusercontent.com/\1/\2/\3#')
-            fi
-            echo "Fetching: $raw_url"
-            content=$(curl -fsSL "$raw_url")
-            if echo "$content" | grep -qE '^[A-Za-z0-9+/=]+$'; then
-              echo "$content" | base64 -d >> v2.txt || echo "# ⚠️ 解码失败: $raw_url" >> v2.txt
-            else
-              echo "$content" >> v2.txt
-            fi
-            echo -e "\n" >> v2.txt
-          done < dz1.txt
+      - name: Merge all sources into v2.txt
+        run: python3 merge_nodes.py
 
-      - name: Merge dz2.txt GitHub repos
-        run: |
-          while IFS= read -r repo_url; do
-            [[ -z "$repo_url" || "$repo_url" =~ ^# ]] && continue
-            echo "🔍 扫描仓库: $repo_url"
-            if [[ "$repo_url" =~ github.com/([^/]+)/([^/]+) ]]; then
-              user="${BASH_REMATCH[1]}"
-              repo="${BASH_REMATCH[2]}"
-              branch=$(curl -s https://api.github.com/repos/$user/$repo | jq -r .default_branch)
-              commit_sha=$(curl -s https://api.github.com/repos/$user/$repo/commits/$branch | jq -r .sha)
-              files=$(curl -s https://api.github.com/repos/$user/$repo/commits/$commit_sha | jq -r '.files[] | select(.filename | endswith(".txt")) | .filename')
-              for file in $files; do
-                raw_url="https://raw.githubusercontent.com/$user/$repo/$branch/$file"
-                echo "📄 获取文件: $raw_url"
-                content=$(curl -fsSL "$raw_url")
-                if echo "$content" | grep -qE '^[A-Za-z0-9+/=]+$'; then
-                  echo "$content" | base64 -d >> v2.txt || echo "# ⚠️ 解码失败: $raw_url" >> v2.txt
-                else
-                  echo "$content" >> v2.txt
-                fi
-                echo -e "\n" >> v2.txt
-                break
-              done
-            fi
-          done < dz2.txt
-
-      - name: Rename nodes with city info
-        run: |
-          pip install requests
-          python3 merge_nodes.py
-
-      - name: Install custom Xray-core (with test support)
-        run: |
-          echo "📦 下载你上传的 Xray 构建"
-          curl -L -o xray.zip https://github.com/user-attachments/files/23049875/Xray-linux-64.zip
-          unzip -o xray.zip || (echo "❌ 解压失败"; exit 1)
-          chmod +x xray
-          sudo mv xray /usr/local/bin/
-          echo "✅ 当前版本信息:"
-          xray version
-          echo "✅ 命令支持情况:"
-          xray help | grep test || (echo "❌ 当前版本不支持 test 命令"; exit 1)
-
-      - name: Run speed test
-        run: python3 speed_test.py
+      - name: Test node latency and filter
+        run: python3 test_nodes.py
 
       - name: Set Git identity
         run: |
@@ -93,5 +32,5 @@ jobs:
       - name: Commit and push results
         run: |
           git add v2.txt
-          git commit -m "Auto-sync v2.txt with city and speed test"
+          git commit -m "Auto-sync with latency test"
           git push
