--- a/.github/workflows/sync-v2.yml
+++ b/.github/workflows/sync-v2.yml
@@ -73,15 +73,14 @@ jobs:
       - name: 🏷️ Rename nodes with city info
         run: python3 merge_nodes.py
 
-      - name: ⚙️ Install sing-box core
+      - name: ⚙️ Extract sing-box from v2rayN package
         run: |
-          echo "📦 下载 sing-box 构建"
-          curl -L -o sing-box.zip https://github.com/CCXUEHUI/tb/releases/download/1/sing-box-linux-64.zip
-          unzip -o sing-box.zip
-          chmod +x sing-box || chmod +x sing-box-linux-64/sing-box || true
-          if [ -f sing-box-linux-64/sing-box ]; then mv sing-box-linux-64/sing-box sing-box; fi
-          sudo mv sing-box /usr/local/bin/sing-box
-          echo "✅ 当前版本信息:"
+          echo "📦 解压 v2ray 包并提取 sing-box"
+          curl -L -o v2ray.zip https://github.com/CCXUEHUI/tb/releases/download/1/v2rayN-linux-64.zip
+          unzip -o v2ray.zip
+          chmod +x v2rayN-linux-64/bin/sing-box/sing-box
+          sudo mv v2rayN-linux-64/bin/sing-box/sing-box /usr/local/bin/sing-box
+          echo "✅ sing-box 版本:"
           sing-box version
 
       - name: 🚀 Run latency test and filter nodes
